--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -45,8 +45,8 @@ body{
   color: #080710;
   font-size: 14px;
   font-weight: 300;
-  padding-bottom: 15px;
-  padding-top: 15px;
+  padding-bottom: 13px;
+  padding-top: 13px;
   border-radius: 0 15px 15px 0;
   cursor: pointer;
   outline: none;
