--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -36,24 +36,3 @@ label {
   align-items: center;
   justify-content: center;
 }
-
-.candidates {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-h2{
-  margin: 0 0 0 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-select{
-  margin: 0 0 0 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
